--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "sqlite3",
   "version": "1.0.0",
   "description": "[![Tags](https://img.shields.io/github/release/denodrivers/sqlite3)](https://github.com/denodrivers/sqlite3/releases) [![Doc](https://doc.deno.land/badge.svg)](https://doc.deno.land/https/deno.land/x/sqlite3@0.4.3/mod.ts) [![Checks](https://github.com/denodrivers/sqlite3/actions/workflows/ci.yml/badge.svg)](https://github.com/denodrivers/sqlite3/actions/workflows/ci.yml) [![License](https://img.shields.io/github/license/denodrivers/sqlite3)](https://github.com/denodrivers/sqlite3/blob/master/LICENSE)",
-  "main": "bunbench.js",
+  "main": "dist/src/index.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ts-node test/test.ts",
+    "build": "tsc -p ."
   },
   "repository": {
     "type": "git",
@@ -20,8 +21,13 @@
     "url": "https://github.com/denodrivers/sqlite3/issues"
   },
   "homepage": "https://github.com/denodrivers/sqlite3#readme",
+  "devDependencies": {
+    "@types/node": "^20.3.3",
+    "better-sqlite3": "^8.4.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
+  },
   "dependencies": {
-    "better-sqlite3": "^7.6.2",
-    "mitata": "^0.1.6"
+    "koffi": "^2.5.0"
   }
 }
