--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,10 @@
         "lib": [
             "ESNext"
         ],
+		"module": "CommonJS",
         "target": "ESNext",
         "moduleResolution": "node",
-        "outDir": "dist"
+        "outDir": "dist",
+        "declaration": true
     }
 }
