--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "test": "ts-node test/test.ts",
+    "build-sqlite": "ts-node scripts/build.ts",
     "build": "tsc -p ."
   },
   "repository": {
