--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -59,8 +59,9 @@ jobs:
         if: ${{ github.ref == 'refs/heads/main' }}
         uses: actions/upload-artifact@v3
         with:
-          name: sqlite3
-          path: |
-            build/libsqlite3_x64.so
-            build/libsqlite3_x64.dylib
-            build/sqlite3_x64.dll
+          name: sqlite3-win
+          path: build/sqlite3_x64.dll
+          name: sqlite3-mac
+          path: build/libsqlite3_x64.dylib
+          name: sqlite3-linux
+          path: build/libsqlite3_x64.so
