Fix actions.yml syntax

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -56,24 +56,24 @@ jobs:
       #       build/sqlite3_x64.dll
 
       - name: Push Binaries (Windows)
-        if: ${{ github.ref == 'refs/heads/main' }}
-        if: matrix.os == 'windows-latest'
+        if: |
+          ${{ github.ref == 'refs/heads/main' && matrix.os == 'windows-latest' }}
         uses: actions/upload-artifact@v3
         with:
           name: sqlite3-win
           path: build/sqlite3_x64.dll
 
       - name: Push Binaries (Mac)
-        if: ${{ github.ref == 'refs/heads/main' }}
-        if: matrix.os == 'macos-latest'
+        if: |
+          ${{ github.ref == 'refs/heads/main' && matrix.os == 'macos-latest' }}
         uses: actions/upload-artifact@v3
         with:
           name: sqlite3-mac
           path: build/libsqlite3_x64.dylib
 
       - name: Push Binaries (Linux)
-        if: ${{ github.ref == 'refs/heads/main' }}
-        if: matrix.os == 'ubuntu-20.04'
+        if: |
+          ${{ github.ref == 'refs/heads/main' && matrix.os == 'ubuntu-20.04' }}
         uses: actions/upload-artifact@v3
         with:
           name: sqlite3-linux
